// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty notam renders error 1`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (null)
      </button>
      <button
        class="button secondary"
      >
        FIR (null)
      </button>
      <button
        class="button secondary"
      >
        GPS (null)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`empty notam renders error 2`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (null)
      </button>
      <button
        class="button secondary"
      >
        FIR (null)
      </button>
      <button
        class="button secondary"
      >
        GPS (null)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 1`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (35)
      </button>
      <button
        class="button secondary"
      >
        FIR (48)
      </button>
      <button
        class="button secondary"
      >
        GPS (2)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  >
    <div
      class="notif-text"
    >
      <div>
        <strong>
          000000 CYMX MONTREAL INTL (MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RSC 06/24 180 FT CL 20 PCT WET SN TRACE, 80 PCT BARE AND DRY.
REMAINING WID 100 PCT DRY SN 1 INS. RMK: SLIPPERY PORTIONS TWYS AND
APRONS. 1902141821
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180368 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX AMEND CFS: COMM: GND ADV: TO READ MIRABEL 121.8 (E)
(EMERGENCY ONLY 450-476-3141)
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180479 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX WEF 2018 AUG 16 1200 AMEND PUB: PRO: ADD:
THE MINISTER HAS AUTH SPECIFIC OPR RESTRICTIONS REGARDING COM
INTENDED FOR THE MF, AS WELL AS THE INTRODUCTION OF A GROUND
ADVISORY FREQ (GND ADV) PURSUANT TO CAR 602.97 (2), 602.98 (1)
AND 602.99.
DEP PROC: TO READ: PRIOR TO TAXI FOR DEP: CTC GND ADV ON 121.8
FOR CLR AND INITIAL ADVISORY INFO. AFTER RECEIVING INITIAL
ADVISORY INFO, GND ADV WILL INITIATE COM TRANSFER TO RDO 119.1
PRIOR TO ENTERING THE RUNWAY/DEP SURFACE.
PILOTS ARE REQUIRED TO ASCERTAIN THAT THERE IS NO LIKELIHOOD OF
COLLISION WITH ANOTHER ACFT OR A VEHICLE PRIOR TO DEP. (AS
STATED IN CAR 602.96, 2A AND B)
ADD: ARR PROC: AFTER EXITING THE RWY/ARR SURFACE AND REPORTING
CLEAR ON THE RDO FREQ, PILOTS WILL BE DIRECTED TO CTC GND ADV
ON 121.8 FOR GROUND TFC AND TAXIING INFO BFR ENTERING THE TWY.
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180759 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX REDL 11/29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180760 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX PAPI 29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190013 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MOBILE CRANE APRX 197 FT BFR THR 06 AND 3000 FT LEFT
EXTENDED RCL. 100 FT AGL 359 MSL. LGTD AND PAINTED. 1200-2300 DLY
1901071200 TIL 1902282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190054 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MULTIPLE CRANES RADIUS 200 FT CENTRE 454103N 740057W
(APRX 4584 FT BEYOND THR 06 AND 2515 FT LEFT OF RCL)
120 FT AGL 363 MSL. LGTD AND PAINTED.
1901141100 TIL 1903300500
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190096 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX TWY A CLSD BTN TWY H AND A5
1901301153 TIL 1904292000
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190099 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX VOR/DME RWY 11 APCH: VOR/DME STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190100 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX ILS RWY 11 APCH: ILS AND LOC STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190101 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 11 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190102 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 29 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190117 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 CLSD
FEB 04 SS-SR
FEB 05 1300-2130 SS-SR
FEB 06-MAR 28 SS-SR
1902041955 TIL 1903291100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190119 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX CRANE APRX 4215 FT BFR THR 29 AND 3420 FT RIGHT
OF EXTENDED RCL 140 FT AGL 405 MSL. LGTD AND PAINTED.
1902061100 TIL 1902282100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190137 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 AVBL FOR MIL ACFT ONLY
AVBL AS TWY FOR ALL ACFT
FEB 12 1600-SS
FEB 13-MAR 28 SR-SS
1902121600 TIL 1903282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190142 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX FIREWORKS ACT RADIUS 0.1 NM CENTRE 454100N 735229W
(APRX 7 NM ESE CYMX, 2 NM ESE CSW5) SFC TO 200 FT AGL
1902170000 TIL 1902170015
      </div>
    </div>
  </div>
</div>
`;

exports[`notam renders properly 2`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
        disabled=""
      >
        Aerodrome (null)
      </button>
      <button
        class="button secondary"
      >
        FIR (13)
      </button>
      <button
        class="button secondary"
      >
        GPS (25)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  >
    <div
      class="notif-text"
    >
      <div>
        <strong>
          000000 CYMX MONTREAL INTL (MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RSC 06/24 180 FT CL 20 PCT WET SN TRACE, 80 PCT BARE AND DRY.
REMAINING WID 100 PCT DRY SN 1 INS. RMK: SLIPPERY PORTIONS TWYS AND
APRONS. 1902141821
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180368 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX AMEND CFS: COMM: GND ADV: TO READ MIRABEL 121.8 (E)
(EMERGENCY ONLY 450-476-3141)
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180479 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX WEF 2018 AUG 16 1200 AMEND PUB: PRO: ADD:
THE MINISTER HAS AUTH SPECIFIC OPR RESTRICTIONS REGARDING COM
INTENDED FOR THE MF, AS WELL AS THE INTRODUCTION OF A GROUND
ADVISORY FREQ (GND ADV) PURSUANT TO CAR 602.97 (2), 602.98 (1)
AND 602.99.
DEP PROC: TO READ: PRIOR TO TAXI FOR DEP: CTC GND ADV ON 121.8
FOR CLR AND INITIAL ADVISORY INFO. AFTER RECEIVING INITIAL
ADVISORY INFO, GND ADV WILL INITIATE COM TRANSFER TO RDO 119.1
PRIOR TO ENTERING THE RUNWAY/DEP SURFACE.
PILOTS ARE REQUIRED TO ASCERTAIN THAT THERE IS NO LIKELIHOOD OF
COLLISION WITH ANOTHER ACFT OR A VEHICLE PRIOR TO DEP. (AS
STATED IN CAR 602.96, 2A AND B)
ADD: ARR PROC: AFTER EXITING THE RWY/ARR SURFACE AND REPORTING
CLEAR ON THE RDO FREQ, PILOTS WILL BE DIRECTED TO CTC GND ADV
ON 121.8 FOR GROUND TFC AND TAXIING INFO BFR ENTERING THE TWY.
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180759 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX REDL 11/29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180760 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX PAPI 29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190013 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MOBILE CRANE APRX 197 FT BFR THR 06 AND 3000 FT LEFT
EXTENDED RCL. 100 FT AGL 359 MSL. LGTD AND PAINTED. 1200-2300 DLY
1901071200 TIL 1902282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190054 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MULTIPLE CRANES RADIUS 200 FT CENTRE 454103N 740057W
(APRX 4584 FT BEYOND THR 06 AND 2515 FT LEFT OF RCL)
120 FT AGL 363 MSL. LGTD AND PAINTED.
1901141100 TIL 1903300500
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190096 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX TWY A CLSD BTN TWY H AND A5
1901301153 TIL 1904292000
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190099 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX VOR/DME RWY 11 APCH: VOR/DME STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190100 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX ILS RWY 11 APCH: ILS AND LOC STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190101 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 11 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190102 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 29 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190117 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 CLSD
FEB 04 SS-SR
FEB 05 1300-2130 SS-SR
FEB 06-MAR 28 SS-SR
1902041955 TIL 1903291100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190119 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX CRANE APRX 4215 FT BFR THR 29 AND 3420 FT RIGHT
OF EXTENDED RCL 140 FT AGL 405 MSL. LGTD AND PAINTED.
1902061100 TIL 1902282100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190137 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 AVBL FOR MIL ACFT ONLY
AVBL AS TWY FOR ALL ACFT
FEB 12 1600-SS
FEB 13-MAR 28 SR-SS
1902121600 TIL 1903282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190142 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX FIREWORKS ACT RADIUS 0.1 NM CENTRE 454100N 735229W
(APRX 7 NM ESE CYMX, 2 NM ESE CSW5) SFC TO 200 FT AGL
1902170000 TIL 1902170015
      </div>
    </div>
  </div>
</div>
`;

exports[`notam renders properly 3`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (54)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        FIR (null)
      </button>
      <button
        class="button secondary"
      >
        GPS (11)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  >
    <div
      class="notif-text"
    >
      <div>
        <strong>
          000000 CYMX MONTREAL INTL (MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RSC 06/24 180 FT CL 20 PCT WET SN TRACE, 80 PCT BARE AND DRY.
REMAINING WID 100 PCT DRY SN 1 INS. RMK: SLIPPERY PORTIONS TWYS AND
APRONS. 1902141821
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180368 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX AMEND CFS: COMM: GND ADV: TO READ MIRABEL 121.8 (E)
(EMERGENCY ONLY 450-476-3141)
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180479 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX WEF 2018 AUG 16 1200 AMEND PUB: PRO: ADD:
THE MINISTER HAS AUTH SPECIFIC OPR RESTRICTIONS REGARDING COM
INTENDED FOR THE MF, AS WELL AS THE INTRODUCTION OF A GROUND
ADVISORY FREQ (GND ADV) PURSUANT TO CAR 602.97 (2), 602.98 (1)
AND 602.99.
DEP PROC: TO READ: PRIOR TO TAXI FOR DEP: CTC GND ADV ON 121.8
FOR CLR AND INITIAL ADVISORY INFO. AFTER RECEIVING INITIAL
ADVISORY INFO, GND ADV WILL INITIATE COM TRANSFER TO RDO 119.1
PRIOR TO ENTERING THE RUNWAY/DEP SURFACE.
PILOTS ARE REQUIRED TO ASCERTAIN THAT THERE IS NO LIKELIHOOD OF
COLLISION WITH ANOTHER ACFT OR A VEHICLE PRIOR TO DEP. (AS
STATED IN CAR 602.96, 2A AND B)
ADD: ARR PROC: AFTER EXITING THE RWY/ARR SURFACE AND REPORTING
CLEAR ON THE RDO FREQ, PILOTS WILL BE DIRECTED TO CTC GND ADV
ON 121.8 FOR GROUND TFC AND TAXIING INFO BFR ENTERING THE TWY.
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180759 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX REDL 11/29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180760 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX PAPI 29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190013 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MOBILE CRANE APRX 197 FT BFR THR 06 AND 3000 FT LEFT
EXTENDED RCL. 100 FT AGL 359 MSL. LGTD AND PAINTED. 1200-2300 DLY
1901071200 TIL 1902282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190054 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MULTIPLE CRANES RADIUS 200 FT CENTRE 454103N 740057W
(APRX 4584 FT BEYOND THR 06 AND 2515 FT LEFT OF RCL)
120 FT AGL 363 MSL. LGTD AND PAINTED.
1901141100 TIL 1903300500
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190096 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX TWY A CLSD BTN TWY H AND A5
1901301153 TIL 1904292000
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190099 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX VOR/DME RWY 11 APCH: VOR/DME STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190100 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX ILS RWY 11 APCH: ILS AND LOC STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190101 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 11 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190102 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 29 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190117 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 CLSD
FEB 04 SS-SR
FEB 05 1300-2130 SS-SR
FEB 06-MAR 28 SS-SR
1902041955 TIL 1903291100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190119 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX CRANE APRX 4215 FT BFR THR 29 AND 3420 FT RIGHT
OF EXTENDED RCL 140 FT AGL 405 MSL. LGTD AND PAINTED.
1902061100 TIL 1902282100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190137 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 AVBL FOR MIL ACFT ONLY
AVBL AS TWY FOR ALL ACFT
FEB 12 1600-SS
FEB 13-MAR 28 SR-SS
1902121600 TIL 1903282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190142 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX FIREWORKS ACT RADIUS 0.1 NM CENTRE 454100N 735229W
(APRX 7 NM ESE CYMX, 2 NM ESE CSW5) SFC TO 200 FT AGL
1902170000 TIL 1902170015
      </div>
    </div>
  </div>
</div>
`;

exports[`notam renders properly 4`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (87)
      </button>
      <button
        class="button secondary"
      >
        FIR (32)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        GPS (null)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  >
    <div
      class="notif-text"
    >
      <div>
        <strong>
          000000 CYMX MONTREAL INTL (MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RSC 06/24 180 FT CL 20 PCT WET SN TRACE, 80 PCT BARE AND DRY.
REMAINING WID 100 PCT DRY SN 1 INS. RMK: SLIPPERY PORTIONS TWYS AND
APRONS. 1902141821
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180368 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX AMEND CFS: COMM: GND ADV: TO READ MIRABEL 121.8 (E)
(EMERGENCY ONLY 450-476-3141)
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180479 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX WEF 2018 AUG 16 1200 AMEND PUB: PRO: ADD:
THE MINISTER HAS AUTH SPECIFIC OPR RESTRICTIONS REGARDING COM
INTENDED FOR THE MF, AS WELL AS THE INTRODUCTION OF A GROUND
ADVISORY FREQ (GND ADV) PURSUANT TO CAR 602.97 (2), 602.98 (1)
AND 602.99.
DEP PROC: TO READ: PRIOR TO TAXI FOR DEP: CTC GND ADV ON 121.8
FOR CLR AND INITIAL ADVISORY INFO. AFTER RECEIVING INITIAL
ADVISORY INFO, GND ADV WILL INITIATE COM TRANSFER TO RDO 119.1
PRIOR TO ENTERING THE RUNWAY/DEP SURFACE.
PILOTS ARE REQUIRED TO ASCERTAIN THAT THERE IS NO LIKELIHOOD OF
COLLISION WITH ANOTHER ACFT OR A VEHICLE PRIOR TO DEP. (AS
STATED IN CAR 602.96, 2A AND B)
ADD: ARR PROC: AFTER EXITING THE RWY/ARR SURFACE AND REPORTING
CLEAR ON THE RDO FREQ, PILOTS WILL BE DIRECTED TO CTC GND ADV
ON 121.8 FOR GROUND TFC AND TAXIING INFO BFR ENTERING THE TWY.
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180759 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX REDL 11/29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          180760 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX PAPI 29 U/S 1811222050 TIL 1902221600
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190013 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MOBILE CRANE APRX 197 FT BFR THR 06 AND 3000 FT LEFT
EXTENDED RCL. 100 FT AGL 359 MSL. LGTD AND PAINTED. 1200-2300 DLY
1901071200 TIL 1902282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190054 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX MULTIPLE CRANES RADIUS 200 FT CENTRE 454103N 740057W
(APRX 4584 FT BEYOND THR 06 AND 2515 FT LEFT OF RCL)
120 FT AGL 363 MSL. LGTD AND PAINTED.
1901141100 TIL 1903300500
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190096 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX TWY A CLSD BTN TWY H AND A5
1901301153 TIL 1904292000
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190099 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX VOR/DME RWY 11 APCH: VOR/DME STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190100 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX ILS RWY 11 APCH: ILS AND LOC STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190101 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 11 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190102 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RNAV(GNSS) RWY 29 APCH:
LPV, LNAV/VNAV AND LNAV STRAIGHT-IN MINIMA NOT AUTH
SS-SR
1901302045 TIL 1904250901
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190117 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 CLSD
FEB 04 SS-SR
FEB 05 1300-2130 SS-SR
FEB 06-MAR 28 SS-SR
1902041955 TIL 1903291100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190119 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX CRANE APRX 4215 FT BFR THR 29 AND 3420 FT RIGHT
OF EXTENDED RCL 140 FT AGL 405 MSL. LGTD AND PAINTED.
1902061100 TIL 1902282100
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190137 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX RWY 11/29 AVBL FOR MIL ACFT ONLY
AVBL AS TWY FOR ALL ACFT
FEB 12 1600-SS
FEB 13-MAR 28 SR-SS
1902121600 TIL 1903282300
      </div>
    </div>
    <div
      class="notif-text"
    >
      <div>
        <strong>
          190142 CYMX MONTREAL INTL(MIRABEL)
        </strong>
      </div>
      <div>
        CYMX FIREWORKS ACT RADIUS 0.1 NM CENTRE 454100N 735229W
(APRX 7 NM ESE CYMX, 2 NM ESE CSW5) SFC TO 200 FT AGL
1902170000 TIL 1902170015
      </div>
    </div>
  </div>
</div>
`;

exports[`notam renders properly 5`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (35)
      </button>
      <button
        class="button secondary"
      >
        FIR (48)
      </button>
      <button
        class="button secondary"
      >
        GPS (2)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 6`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
        disabled=""
      >
        Aerodrome (null)
      </button>
      <button
        class="button secondary"
      >
        FIR (13)
      </button>
      <button
        class="button secondary"
      >
        GPS (25)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 7`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (54)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        FIR (null)
      </button>
      <button
        class="button secondary"
      >
        GPS (11)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 8`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (87)
      </button>
      <button
        class="button secondary"
      >
        FIR (32)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        GPS (null)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 9`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (35)
      </button>
      <button
        class="button secondary"
      >
        FIR (48)
      </button>
      <button
        class="button secondary"
      >
        GPS (2)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 10`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
        disabled=""
      >
        Aerodrome (null)
      </button>
      <button
        class="button secondary"
      >
        FIR (13)
      </button>
      <button
        class="button secondary"
      >
        GPS (25)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 11`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (54)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        FIR (null)
      </button>
      <button
        class="button secondary"
      >
        GPS (11)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 12`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (87)
      </button>
      <button
        class="button secondary"
      >
        FIR (32)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        GPS (null)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 13`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (35)
      </button>
      <button
        class="button secondary"
      >
        FIR (48)
      </button>
      <button
        class="button secondary"
      >
        GPS (2)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 14`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
        disabled=""
      >
        Aerodrome (null)
      </button>
      <button
        class="button secondary"
      >
        FIR (13)
      </button>
      <button
        class="button secondary"
      >
        GPS (25)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 15`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (54)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        FIR (null)
      </button>
      <button
        class="button secondary"
      >
        GPS (11)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;

exports[`notam renders properly 16`] = `
<div
  class="col"
>
  <div
    id="notam-header"
  >
    <div
      class="subtitle"
    >
      NOTAM
    </div>
    <div
      class="button-selection"
    >
      <button
        class="button primary"
      >
        Aerodrome (87)
      </button>
      <button
        class="button secondary"
      >
        FIR (32)
      </button>
      <button
        class="button secondary"
        disabled=""
      >
        GPS (null)
      </button>
    </div>
  </div>
  <div
    class="Notams"
  />
</div>
`;
